[package]
name = "hello"
version = "1.0.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
translation = { version = "1.0", path = "../../translation"}
rust-embed = "5"
